package policy_gradient_problems.abstract_classes;

public interface TrainerInterface {
}
